--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/genai": "^1.13.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@sendgrid/mail": "^8.1.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +20,7 @@
     "coin-address-validator": "1.0.4-1",
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ethers": "^5.4.6",
@@ -37,7 +39,6 @@
     "perfect-scrollbar": "1.5.1",
     "prop-types": "15.7.2",
     "react": "^18.2.0",
-    "react-chartist": "0.14.4",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.1",
